tdf#105162: Need to call epoxy_handle_external_wglMakeCurrent()

Somewhere, in time before calling epoxy-wrapper OpenGL functions. This
seems to be a good place. Educated guess based on debugging, turned
out to work.

Change-Id: Id3f1dfb0c5a9dbfb166c47ea81db902af1a4fc08